--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -143,8 +143,8 @@ jobs:
       with:
         name: ${{ steps.vars.outputs.artifact }}
         path: |
-          ${{ steps.vars.outputs.latest }}
-          ${{ steps.vars.outputs.latest }}.sha256
+          ${{ steps.vars.outputs.file }}
+          ${{ steps.vars.outputs.file }}.sha256
 
 
   define-upload-matrix:
@@ -187,7 +187,7 @@ jobs:
           done
           echo "::endgroup::"
 
-          echo "versions=$(ls | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+          echo "versions=$(ls release | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
       - name: Upload artifacts
         if: ${{ steps.extract.outputs.versions != '[]' }}
