--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -22,7 +22,7 @@ jobs:
     name: Find latest packages
     runs-on: ubuntu-latest
     outputs:
-      items: ${{ steps.links.outputs.items }}
+      items: ${{ steps.items.outputs.items }}
     steps:
     - name: Download Release file
       uses: nick-fields/retry@v3
@@ -205,3 +205,25 @@ jobs:
           files: "release/${{ matrix.version }}/*"
           make_latest: ${{ matrix.version == env.PERMANENT_RELEASE }}
           prerelease: true
+
+
+  create-repository:
+    runs-on: ubuntu-latest
+    needs: handle-package
+    name: Update APT repository
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: release
+          path: release
+      - uses: smeinecke/apt-repo-action@v2.1.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          arch: ${{ steps.data.outputs.architectures }}
+          version: debian
+          file: "release/${{ env.PERMANENT_RELEASE }}/*.deb"
+          file_target_version: debian
+          public_key: ${{ secrets.REPO_PUBLIC }}
+          private_key: ${{ secrets.REPO_PRIVATE }}
+          key_passphrase: ${{ secrets.REPO_SECRET }}
