--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -54,6 +54,7 @@ jobs:
         # Convert the output to a JSON array
         DEB_LINKS_JSON=$(echo "$DEB_FILES" | jq -R -s -c 'split("\n") | map(select(length > 0) | {path: ., file: (split("/") | last)})')
 
+        echo $DEB_LINKS_JSON
         # Set the output
         echo "items=$DEB_LINKS_JSON" >> $GITHUB_OUTPUT
 
