--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -5,12 +5,12 @@ on:
     inputs:
       ignore_existing:
         description: 'Ignore existing releases'
-        required: false
+        required: true
         type: 'boolean'
         default: 'true'
       download_existing:
         description: 'Download instead of building'
-        required: false
+        required: true
         type: 'boolean'
         default: 'false'
   schedule:
@@ -98,7 +98,7 @@ jobs:
         fi
 
     - name: Download instead of building
-      if: ${{ github.event_name == 'workflow_dispatch' && !github.event.inputs.ignore_existing && github.event.inputs.download_existing && steps.check.outputs.exists == true }}
+      if: ${{ github.event_name == 'workflow_dispatch' && !github.event.inputs.ignore_existing && github.event.inputs.download_existing && steps.check.outputs.exists == 'true' }}
       id: simulate
       run: curl -fL -o "${{ matrix.item.file }}" "${{ steps.check.outputs.url }}"
 
