--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -98,7 +98,7 @@ jobs:
         fi
 
     - name: Download instead of building
-      if: ${{ github.event_name == 'workflow_dispatch' && !github.event.inputs.ignore_existing && github.event.inputs.download_existing && steps.check.outputs.exists == 'true' }}
+      if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.ignore_existing == 'false' && github.event.inputs.download_existing && steps.check.outputs.exists == 'true' }}
       id: simulate
       run: curl -fL -o "${{ matrix.item.file }}" "${{ steps.check.outputs.url }}"
 
