--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -117,7 +117,7 @@ jobs:
 
     - name: Rebuild package
       id: rebuild
-      if: ${{ steps.download.result == 'success' }}
+      if: ${{ steps.download.outcome == 'success' }}
       run: |
         echo "::group::Extract package contents to a temporary directory"
         mkdir -p unpacked
@@ -154,7 +154,7 @@ jobs:
         echo "::endgroup::"
 
     - name: Upload artifacts
-      if: ${{ steps.download.result == 'success' || steps.latest.result == 'success' }}
+      if: ${{ steps.download.outcome == 'success' || steps.latest.outcome == 'success' }}
       uses: actions/upload-artifact@v4
       with:
         name: ${{ steps.vars.outputs.artifact }}
