--- a/.github/workflows/repackage.yml
+++ b/.github/workflows/repackage.yml
@@ -259,7 +259,7 @@ jobs:
         run: |
           echo "architectures<<EOF" >> $GITHUB_OUTPUT
           for file in release/*.deb; do
-              echo "$file" | rev | cut -d'_' -f1 | rev
+              echo "${file//.deb}" | rev | cut -d'_' -f1 | rev
           done | sort | uniq >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
           echo "public<<EOF" >> $GITHUB_OUTPUT
